# coffeeshop-fastapi-tz

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  local.yml  production.yml  pyproject.toml
.envs/local/: .env.database  .env.local
.envs/production/: .env.database  .env.production
alembic/: env.py
alembic/versions/: 2025_10_31_2157-3d91cfe68560_users_table.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  users.py
app/core/: config.py  database.py  dependencies.py  logging.py  middleware.py  security.py
app/models/: user.py
app/repositories/: user_repository.py
app/schemas/: user.py
app/services/: auth_service.py  user_service.py
app/tasks/: celery_app.py
compose/local/fastapi/: Dockerfile  entrypoint.sh  start
compose/local/fastapi/celery/beat/: start
compose/local/fastapi/celery/flower/: start
compose/local/fastapi/celery/worker/: start
compose/local/postgres/: Dockerfile  postgresql.conf
compose/local/postgres/maintenance/: backup  backups  restore  rmbackup
compose/local/postgres/maintenance/_sourced/: messages.sh
compose/production/fastapi/: Dockerfile  entrypoint.sh  start
compose/production/fastapi/celery/beat/: start
compose/production/fastapi/celery/worker/: start
compose/production/nginx/: Dockerfile  nginx.conf
compose/production/postgres/: Dockerfile  postgresql.conf
compose/production/postgres/maintenance/: backup  backups  restore  rmbackup
compose/production/postgres/maintenance/_sourced/: constants.sh
scripts/: create_admin.py
src/: __init__.py  main.py
src/api/v1/: router.py
src/api/v1/endpoints/: auth_routes.py  user_routes.py
src/core/: config.py  database.py  dependencies.py  exceptions.py  handlers.py  logging.py  middleware.py  security.py
src/models/: user.py
src/repositories/: user_repository.py
src/schemas/: user.py
src/services/: auth_service.py  user_service.py
src/tasks/: celery_app.py
tests/: conftest.py
tests/api/v1/: test_auth.py  test_users.py
